--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "three",
   "version": "0.136.0",
   "description": "JavaScript 3D library",
-  "main": "build/three.js",
-  "module": "build/three.module.js",
+  "type": "module",
+  "main": "./build/three.js",
+  "module": "./build/three.module.js",
+  "exports": {
+    ".": {
+      "import": "./build/three.module.js",
+      "require": "./build/three.js"
+    },
+    "./examples/jsm/*": "./examples/jsm/*.js",
+    "./src/*": "./src/*.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mrdoob/three.js"
@@ -41,7 +50,6 @@
     "globals": {
       "__THREE_DEVTOOLS__": "readonly",
       "WebGL2ComputeRenderingContext": "readonly",
-
       "potpack": "readonly",
       "fflate": "readonly",
       "bodymovin": "readonly",
@@ -49,10 +57,10 @@
       "Stats": "readonly",
       "XRWebGLBinding": "readonly",
       "XRWebGLLayer": "readonly",
-
       "GPUShaderStage": "readonly",
       "GPUBufferUsage": "readonly",
-      "GPUTextureUsage": "readonly"
+      "GPUTextureUsage": "readonly",
+      "QUnit": "readonly"
     },
     "rules": {
       "no-throw-literal": [
@@ -123,12 +131,12 @@
     "eslint": "^7.32.0",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-plugin-html": "^6.2.0",
-    "glob": "^7.2.0",
     "rollup": "^2.57.0",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.5.2",
-    "servez": "^1.12.0"
+    "servez": "^1.12.0",
+    "three": "."
   },
   "jspm": {
     "files": [
