--- a/package.json
+++ b/package.json
@@ -135,8 +135,7 @@
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.5.2",
-    "servez": "^1.12.0",
-    "three": "."
+    "servez": "^1.12.0"
   },
   "jspm": {
     "files": [
