Update package.json exports paths
Related issue: -

**Description**

Update the export paths to include files located in the `./examples/` folder in order to include JSON fonts.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "import": "./build/three.module.js",
       "require": "./build/three.cjs"
     },
-    "./examples/jsm/*": "./examples/jsm/*",
+    "./examples/*": "./examples/*",
     "./src/*": "./src/*"
   },
   "repository": {
