package.json: only export examples/fonts and examples/jsm

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "import": "./build/three.module.js",
       "require": "./build/three.cjs"
     },
-    "./examples/*": "./examples/*",
+    "./examples/fonts/*": "./examples/fonts/*",
+    "./examples/jsm/*": "./examples/jsm/*",
     "./src/*": "./src/*"
   },
   "repository": {
