--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "import": "./build/three.module.js",
       "require": "./build/three.cjs"
     },
+    "./addons": "./examples/jsm/addons.js",
     "./examples/fonts/*": "./examples/fonts/*",
     "./examples/jsm/*": "./examples/jsm/*",
     "./src/*": "./src/*"
