add global variable platform (#69)
Co-authored-by: liufang <liufang@oppentech.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "three",
-  "version": "0.137.5",
+  "name": "@oppentech/three",
+  "version": "0.137.0",
   "description": "JavaScript 3D library",
   "type": "module",
   "main": "./build/three.js",
@@ -16,9 +16,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mrdoob/three.js"
+    "url": "https://github.com/oppenfuture/three.js"
   },
-  "sideEffects": false,
+  "sideEffects": [
+    "src/Three.js"
+  ],
   "files": [
     "build/three.js",
     "build/three.cjs",
@@ -118,7 +120,7 @@
   "author": "mrdoob",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mrdoob/three.js/issues"
+    "url": "https://github.com/oppenfuture/three.js/issues"
   },
   "homepage": "https://threejs.org/",
   "devDependencies": {
