--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oppentech/three",
-  "version": "0.137.2",
+  "version": "0.137.3-beta1",
   "description": "JavaScript 3D library",
   "type": "module",
   "main": "./build/three.js",
