--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,8 +8,34 @@ on:
 
 jobs:
   deploy:
-    name: "Continous Deployment"
+    name: Deploy to OSS
     runs-on: ubuntu-latest
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v2
+      - name: Install node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'npm'
+      - name: Install packages
+        run: npm ci
+      
+      - name: Build
+        run: npm run build
+
+      - name: Install deployment packages
+        run: npm ci
+        working-directory: deployment
+
+      - name: Deploy to OSS
+        run: node index.js ${{ secrets.ALIYUN_SECRET_ID }} ${{ secrets.ALIYUN_SECRET_KEY }} oss-cn-beijing oppentech-test ../build/three.js /holodeck/js/cd/three-$(git rev-parse HEAD).js
+        working-directory: deployment
+
+  publish:
+    name: Publish to npm
+    runs-on: ubuntu-latest
+
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
@@ -25,17 +51,9 @@ jobs:
 
       - name: Install packages
         run: npm ci
-      
+
       - name: Build
         run: npm run build
-
-      - name: Install deployment packages
-        run: npm ci
-        working-directory: deployment
-
-      - name: Deploy to OSS
-        run: node index.js ${{ secrets.ALIYUN_SECRET_ID }} ${{ secrets.ALIYUN_SECRET_KEY }} oss-cn-beijing oppentech-test ../build/three.js /holodeck/js/cd/three-$(git rev-parse HEAD).js
-        working-directory: deployment
 
       - name: Modify npm repository
         run: |
