--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         run: sh ./utils/three-production.sh
       - uses: webfactory/ssh-agent@v0.5.4
         with:
-            ssh-private-key: ${{ secrets.WEBA_BOT_PAT }}
+            ssh-private-key: ${{ secrets.WEBA_BOT_SSH_KEY }}
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
