--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,22 @@ jobs:
 
       - name: === Running build script ===
         run: sh ./utils/three-production.sh
-      - uses: webfactory/ssh-agent@v0.5.4
+      # - uses: webfactory/ssh-agent@v0.5.4
+      #   with:
+      #       ssh-private-key: ${{ secrets.WEBA_BOT_SSH_KEY }}
+      - name: Create pull request
+        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.WEBA_BOT_PAT }}
         with:
-            ssh-private-key: ${{ secrets.WEBA_BOT_SSH_KEY }}
+          source_folder: 'output'
+          destination_repo: 'webaverse/three'
+          destination_folder: ''
+          destination_base_branch: 'threejs-bump'
+          destination_head_branch: 'main'
+          user_email: 'bot@webaverse.com'
+          user_name: 'Weba Bot'
+          pull_request_reviewers: 'abeersaqib'
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
