--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       # - uses: webfactory/ssh-agent@v0.5.4
       #   with:
       #       ssh-private-key: ${{ secrets.WEBA_BOT_SSH_KEY }}
-      - name: Create pull request
+      - name: Create pull request in weba/three
         uses: paygoc6/action-pull-request-another-repo@v1.0.1
         env:
           API_TOKEN_GITHUB: ${{ secrets.WEBA_BOT_PAT }}
@@ -41,13 +41,13 @@ jobs:
           source_folder: 'output'
           destination_repo: 'webaverse/three'
           destination_folder: ''
-          destination_base_branch: 'threejs-bump'
-          destination_head_branch: 'main'
+          destination_base_branch: 'main'
+          destination_head_branch: 'threejs-bump'
           user_email: 'bot@webaverse.com'
           user_name: 'Weba Bot'
           pull_request_reviewers: 'abeersaqib'
 
-      - name: Create Pull Request
+      - name: Create Pull Request in weba/three.js
         uses: peter-evans/create-pull-request@v4
         with:
           add-paths: |
