--- a/package.json
+++ b/package.json
@@ -141,6 +141,14 @@
     "url": "https://github.com/mrdoob/three.js/issues"
   },
   "homepage": "https://threejs.org/",
+  "dependencies": {
+    "acorn": "1.0.1",
+    "codemirror": "5.65.2",
+    "esprima": "3.1.3",
+    "jsonlint": "1.6.3",
+    "signals": "1.0.0",
+    "ternjs": "0.22.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
