fix: publish only on success

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
 
   publish:
     name: "Publish package"
+    needs: [lint, unit, e2e, e2e-cov] 
     runs-on: ubuntu-latest
     if: github.ref_name == 'dev'
 
