Parallelism, multiple OSes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
-      - name: Install node
+      - name: Install Node
         uses: actions/setup-node@v2
         with:
           node-version: 16
@@ -37,7 +37,7 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
-      - name: Install node
+      - name: Install Node
         uses: actions/setup-node@v2
         with:
           node-version: 16
@@ -50,40 +50,76 @@ jobs:
       - name: === Unit testing ===
         run: npm run test-unit
 
-  e2e:
-    name: "E2E testing"
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        CI: [ 0, 1, 2, 3, 4, 5, 6, 7 ]
+  e2e-windows:
+    name: "E2E testing (Windows)"
+    runs-on: windows-latest
     env:
-      CI: ${{ matrix.CI }}
       FORCE_COLOR: 1
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
-      - name: Install node
+      - name: Install Node
         uses: actions/setup-node@v2
         with:
           node-version: 16
           cache: 'npm'
       - name: Install packages
-        run: |
-          npm ci
-          sudo apt-get install xvfb
+        run: npm ci
       - name: Build
         run: npm run build
 
       - name: === E2E testing ===
-        run: xvfb-run --auto-servernum npm run test-e2e
+        run: npm run test-e2e
+
+  e2e-linux:
+    name: "E2E testing (Linux)"
+    runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: 1
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'npm'
+      - name: Install packages
+        run: npm ci
+      - name: Build
+        run: npm run build
+
+      - name: === E2E testing ===
+        run: npm run test-e2e
+
+  e2e-macos:
+    name: "E2E testing (MacOS)"
+    runs-on: macos-latest
+    env:
+      FORCE_COLOR: 1
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'npm'
+      - name: Install packages
+        run: npm ci
+      - name: Build
+        run: npm run build
+
+      - name: === E2E testing ===
+        run: npm run test-e2e
 
   e2e-cov:
-    name: "Ready for release"
+    name: "Examples ready for release"
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
-      - name: Install node
+      - name: Install Node
         uses: actions/setup-node@v2
         with:
           node-version: 16
