--- a/package.json
+++ b/package.json
@@ -71,7 +71,10 @@
       "GPUShaderStage": "readonly",
       "GPUBufferUsage": "readonly",
       "GPUTextureUsage": "readonly",
-      "QUnit": "readonly"
+      "QUnit": "readonly",
+      "Ammo":"readonly",
+      "XRRigidTransform":"readonly",
+      "XRMediaBinding":"readonly"
     },
     "rules": {
       "no-throw-literal": [
@@ -105,7 +108,7 @@
     "build-examples": "rollup -c utils/build/rollup.examples.config.js && echo '\nFormatting...' && eslint examples/js --ext js --ignore-pattern libs --ignore-pattern ifc --fix",
     "dev": "concurrently --names \"ROLLUP,HTTP\" -c \"bgBlue.bold,bgGreen.bold\" \"rollup -c utils/build/rollup.config.js -w -m inline\" \"servez -p 8080\"",
     "lint": "eslint src --ext js",
-    "lint-examples": "eslint examples/js examples/jsm --ext js --ignore-pattern libs --ignore-pattern ifc",
+    "lint-examples": "eslint examples/js examples/jsm examples/*.html --ext js,html --ignore-pattern libs --ignore-pattern ifc",
     "lint-docs": "eslint docs --ext html",
     "lint-fix": "npm run lint -- --fix && npm run lint-examples -- --fix && npm run lint-docs -- --fix",
     "test-unit": "npm run unit --prefix test",
