--- a/.github/workflows/codeql-code-scanning.yml
+++ b/.github/workflows/codeql-code-scanning.yml
@@ -2,7 +2,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "dev", "enable-github-code-scanning-replacing-lgtm" ]
+    branches: [ "dev" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "dev" ]
