--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -1,4 +1,5 @@
 paths-ignore:
+  - "docs/prettify/**/*.*"
   - "editor/js/libs/**/*.*"
   - "examples/jsm/libs/**/*.*"
   - "examples/jsm/loaders/ifc/**/*.*"
